tweaks to logger, added syslog transport

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 		"less": "1.5.1",
 		"jade": "0.35.0",
 		"winston": "0.7.2",
-		"dateformat": "1.0.6-1.2.3",
+		"dateformat": "1.0.7-1.2.3",
 		"async": "0.2.9",
+		"posix": "1.0.3",
 		"mime": "1.2.11"
 	}
 }
