fixed eager route parameter replacing

--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
 		"async": "0.2.9",
 		"posix": "1.0.3",
 		"mime": "1.2.11"
+	},
+
+	"devDependencies": {
+		"mocha": "1.17.0",
+		"should": "3.0.1"
+	},
+
+	"scripts": {
+		"test": "./node_modules/.bin/mocha -R spec tests"
 	}
 }
