--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"dateformat": "1.0.7-1.2.3",
 		"async": "0.2.9",
 		"posix": "1.0.3",
-		"mime": "1.2.11"
+		"mime": "1.2.11",
+		"nodemailer": "0.6.0"
 	},
 	"devDependencies": {
 		"mocha": "1.17.0",
