--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"async": "0.2.9",
 		"posix": "1.0.3",
 		"mime": "1.2.11",
-		"nodemailer": "0.6.0"
+		"nodemailer": "0.6.0",
+		"email-templates": "0.1.1"
 	},
 	"devDependencies": {
 		"mocha": "1.17.0",
