--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
 		"should": "3.0.1"
 	},
 	"scripts": {
-		"test": "./node_modules/.bin/mocha -R spec tests -t 5000"
+		"test": "./node_modules/.bin/mocha -R dot tests -t 5000"
 	}
 }
