--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"async": "0.2.10",
 		"posix": "1.0.3",
 		"mime": "1.2.11",
+		"moment-timezone": "0.0.3",
 		"nodemailer": "0.6.0",
 		"email-templates": "0.1.1"
 	},
