--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
 		"colors": "0.6.2",
 		"moment-timezone": "0.0.6",
 		"nodemailer": "0.6.3",
-		"email-templates": "0.1.8"
+		"email-templates": "0.1.8",
+		"body-parser": "1.0.2",
+		"cookie-parser": "1.0.1",
+		"express-session": "1.0.4"
 	},
 	"devDependencies": {
 		"mocha": "1.18.2",
