--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"email-templates": "0.1.8",
 		"body-parser": "1.0.2",
 		"cookie-parser": "1.0.1",
+		"connect-multiparty": "1.0.3",
 		"express-session": "1.0.4"
 	},
 	"devDependencies": {
