--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"colors": "0.6.2",
 		"moment-timezone": "0.0.6",
 		"nodemailer": "0.6.3",
-		"email-templates": "0.1.8",
+		"ejs": "1.0.0",
+		"juice2": "0.6.0",
 		"body-parser": "1.0.2",
 		"cookie-parser": "1.0.1",
 		"connect-multiparty": "1.0.3",
